--- a/ansible/roles/op_reth/tasks/main.yml
+++ b/ansible/roles/op_reth/tasks/main.yml
@@ -2,16 +2,34 @@
 # =============================================================================
 # op-reth Role - Install and configure op-reth
 # =============================================================================
+# This role is idempotent and safe to run on operational VMs:
+# - Checks if service is running before making changes
+# - Fails if config changes would affect running service (unless force_restart)
+# - Only restarts when explicitly requested via force_restart variable
+# =============================================================================
+
+# -------------------------------------------------------------------------
+# Check current state
+# -------------------------------------------------------------------------
+- name: Check if op-reth service is running
+  command: systemctl is-active op-reth
+  register: op_reth_running
+  changed_when: false
+  failed_when: false
 
 - name: Check if op-reth binary exists
   stat:
     path: "{{ op_reth_bin_path }}"
   register: op_reth_binary
 
+# -------------------------------------------------------------------------
+# Install binary
+# -------------------------------------------------------------------------
 - name: Download op-reth binary from GCS
   command: >
     gsutil cp "gs://{{ gcs_bucket }}/builds/{{ op_reth_artifact_name }}" "{{ op_reth_bin_path }}"
   when: not op_reth_binary.stat.exists
+  register: op_reth_binary_downloaded
 
 - name: Set op-reth binary permissions
   file:
@@ -22,13 +40,16 @@
 
 - name: Verify op-reth binary
   command: "{{ op_reth_bin_path }} --version"
-  register: op_reth_version
+  register: op_reth_version_output
   changed_when: false
 
 - name: Display op-reth version
   debug:
-    msg: "{{ op_reth_version.stdout }}"
+    msg: "{{ op_reth_version_output.stdout }}"
 
+# -------------------------------------------------------------------------
+# Deploy configuration
+# -------------------------------------------------------------------------
 - name: Deploy reth.toml configuration
   template:
     src: reth.toml.j2
@@ -36,30 +57,115 @@
     owner: "{{ service_user }}"
     group: "{{ service_group }}"
     mode: '0644'
-  notify: Restart op-reth
+  register: reth_config_changed
 
 - name: Deploy op-reth systemd service
   template:
     src: op-reth.service.j2
     dest: /etc/systemd/system/op-reth.service
     mode: '0644'
-  register: op_reth_service_deployed
+  register: reth_service_changed
 
-- name: Reload systemd after service deployment
+- name: Reload systemd if service file changed
   systemd:
     daemon_reload: yes
-  when: op_reth_service_deployed.changed
+  when: reth_service_changed.changed
 
-# Only enable and start service when start_services is true
-# When start_services is false, configure-finish.service will enable and start after snapshot download
+# -------------------------------------------------------------------------
+# Ensure correct ownership of data directory
+# -------------------------------------------------------------------------
+# This fixes ownership issues that can occur when:
+# - Data is copied from snapshot with wrong owner (e.g., tar --no-same-owner)
+# - VM is recreated but data persists with old ownership
+# - Manual intervention left files owned by root
+#
+# We check the mdbx.dat file specifically because:
+# - The directory might have correct ownership but files inside might not
+# - mdbx.dat is the critical file that op-reth needs write access to
+#
+# Performance: chown only modifies inode metadata, not file contents.
+# Even for TB-scale databases, this completes in <1 second.
+# -------------------------------------------------------------------------
+- name: Check ownership of op-reth database file
+  stat:
+    path: "{{ op_reth_data_dir }}/db/mdbx.dat"
+  register: op_reth_db_file_stat
+
+- name: Fix ownership of op-reth data directory
+  file:
+    path: "{{ op_reth_data_dir }}"
+    owner: "{{ service_user }}"
+    group: "{{ service_group }}"
+    recurse: yes
+  when:
+    - op_reth_db_file_stat.stat.exists
+    - op_reth_db_file_stat.stat.pw_name != service_user
+  register: op_reth_ownership_fixed
+
+- name: Log ownership fix applied
+  debug:
+    msg: "Fixed ownership of {{ op_reth_data_dir }} to {{ service_user }}:{{ service_group }}"
+  when: op_reth_ownership_fixed.changed | default(false)
+
+# -------------------------------------------------------------------------
+# Handle changes on running service
+# -------------------------------------------------------------------------
+- name: Set config_changed fact
+  set_fact:
+    op_reth_config_changed: "{{ reth_config_changed.changed or reth_service_changed.changed }}"
+
+- name: Fail if config changed on running service (requires FORCE)
+  fail:
+    msg: |
+      ============================================================
+      ERROR: op-reth configuration changed but service is running
+      ============================================================
+      
+      VM: {{ vm_name }}
+      
+      Changed:
+      {% if reth_config_changed.changed %}  - reth.toml
+      {% endif %}
+      {% if reth_service_changed.changed %}  - op-reth.service
+      {% endif %}
+      
+      Restarting would interrupt the running sync.
+      
+      Options:
+        1. Run with FORCE=true to restart the service:
+           make configure FORCE=true
+        
+        2. Manually restart later when convenient:
+           sudo systemctl restart op-reth
+      
+      ============================================================
+  when:
+    - op_reth_running.rc == 0
+    - op_reth_config_changed
+    - not (force_restart | default(false))
+
+- name: Restart op-reth (FORCE mode - config changed)
+  systemd:
+    name: op-reth
+    state: restarted
+  when:
+    - op_reth_running.rc == 0
+    - op_reth_config_changed
+    - force_restart | default(false)
+
+- name: Restart op-reth (FORCE mode - forced restart even without changes)
+  systemd:
+    name: op-reth
+    state: restarted
+  when:
+    - op_reth_running.rc == 0
+    - not op_reth_config_changed
+    - force_restart | default(false)
+
+# -------------------------------------------------------------------------
+# Enable service (always)
+# -------------------------------------------------------------------------
 - name: Enable op-reth service
   systemd:
     name: op-reth
     enabled: yes
-  when: start_services | default(true)
-
-- name: Start op-reth service
-  systemd:
-    name: op-reth
-    state: started
-  when: start_services | default(true)
