--- a/cloudbuild/benchmark/configure.yaml
+++ b/cloudbuild/benchmark/configure.yaml
@@ -69,7 +69,12 @@ steps:
         with open('/workspace/zone.txt', 'w') as f:
             f.write(project.get('zone', ''))
         with open('/workspace/lssd_vms.json', 'w') as f:
-            json.dump([{'name': vm.get('name'), 'machine_type': vm.get('machine_type', '')} for vm in lssd_vms], f)
+            default_zone = project.get('zone', 'us-central1-a')
+            json.dump([{
+                'name': vm.get('name'),
+                'machine_type': vm.get('machine_type', ''),
+                'zone': vm.get('zone', default_zone)
+            } for vm in lssd_vms], f)
 
   # ---------------------------------------------------------------------------
   # Download inventory from GCS
@@ -231,7 +236,7 @@ steps:
         set -e
         
         PROJECT_ID=$$(cat /workspace/project_id.txt)
-        ZONE=$$(cat /workspace/zone.txt)
+        DEFAULT_ZONE=$$(cat /workspace/zone.txt)
         SNAPSHOT_NAME=$$(cat /workspace/snapshot_name.txt)
         SNAPSHOT_DISK_SIZE=$$(cat /workspace/snapshot_disk_size_gb.txt)
         LSSD_VMS=$$(cat /workspace/lssd_vms_need_data.json)
@@ -254,35 +259,36 @@ steps:
         import sys
 
         lssd_vms = json.loads('$$LSSD_VMS')
+        default_zone = '$$DEFAULT_ZONE'
         
         for vm in lssd_vms:
             vm_name = vm['name']
             machine_type = vm.get('machine_type', '')
+            vm_zone = vm.get('zone', default_zone)
             temp_disk_name = f'{vm_name}-snapshot-temp'
             
-            # C4 machines require hyperdisk-balanced, C3 and others can use pd-balanced
-            # LSSD machines have built-in local SSDs for data; this temp disk is just
-            # for rsync'ing the snapshot data to the local SSDs
-            disk_type = 'hyperdisk-balanced' if machine_type.startswith('c4-') else 'pd-balanced'
+            # Use hyperdisk-balanced for faster rsync to LSSD
+            # (higher throughput than pd-balanced, ~3x faster copy)
+            disk_type = 'hyperdisk-balanced'
             
-            print(f'Creating temp disk: {temp_disk_name} (type: {disk_type})')
+            print(f'Creating temp disk: {temp_disk_name} (type: {disk_type}, zone: {vm_zone})')
             
             # Check if disk already exists
             result = subprocess.run([
                 'gcloud', 'compute', 'disks', 'describe', temp_disk_name,
-                '--zone=$$ZONE', '--project=$$PROJECT_ID'
+                f'--zone={vm_zone}', '--project=$$PROJECT_ID'
             ], capture_output=True)
             
             if result.returncode == 0:
                 print(f'  Temp disk already exists, skipping creation')
             else:
-                # Create disk from snapshot
+                # Create disk from snapshot in the same zone as the VM
                 subprocess.run([
                     'gcloud', 'compute', 'disks', 'create', temp_disk_name,
                     '--source-snapshot=$$SNAPSHOT_NAME',
                     f'--type={disk_type}',
                     '--size=$${SNAPSHOT_DISK_SIZE}GB',
-                    '--zone=$$ZONE',
+                    f'--zone={vm_zone}',
                     '--project=$$PROJECT_ID'
                 ], check=True)
                 print(f'  Created temp disk: {temp_disk_name}')
@@ -295,7 +301,7 @@ steps:
                 'gcloud', 'compute', 'instances', 'attach-disk', vm_name,
                 '--disk=' + temp_disk_name,
                 '--device-name=snapshot-disk',
-                '--zone=$$ZONE',
+                f'--zone={vm_zone}',
                 '--project=$$PROJECT_ID'
             ], capture_output=True)
             
@@ -335,13 +341,25 @@ steps:
         cp /workspace/google_compute_engine.pub /root/.ssh/
         chmod 600 /root/.ssh/google_compute_engine
         
-        # Determine limit based on parameters
+        # Build ansible-playbook arguments
+        LIMIT=""
         if [ -n "${_VM}" ]; then
           echo "Configuring VM: ${_VM}"
           LIMIT="--limit=${_VM}"
         else
           echo "Configuring ALL VMs"
-          LIMIT=""
+        fi
+        
+        EXTRA_VARS=""
+        if [ "${_FORCE}" = "true" ]; then
+          echo "Mode: FORCE (will restart services if config changed)"
+          EXTRA_VARS="--extra-vars force_restart=true"
+        fi
+        
+        CHECK_MODE=""
+        if [ "${_PLAN_ONLY}" = "true" ]; then
+          echo "Mode: PLAN (check mode, no changes)"
+          CHECK_MODE="--check --diff"
         fi
         
         ansible-playbook \
@@ -352,6 +370,8 @@ steps:
           --private-key=/root/.ssh/google_compute_engine \
           --become \
           $$LIMIT \
+          $$EXTRA_VARS \
+          $$CHECK_MODE \
           -v
         
         echo ""
@@ -369,7 +389,7 @@ steps:
         set -e
         
         PROJECT_ID=$$(cat /workspace/project_id.txt)
-        ZONE=$$(cat /workspace/zone.txt)
+        DEFAULT_ZONE=$$(cat /workspace/zone.txt)
         LSSD_VMS=$$(cat /workspace/lssd_vms_need_data.json)
         
         echo "=== Cleaning up temp disks for LSSD machines ==="
@@ -385,17 +405,19 @@ steps:
         import subprocess
 
         lssd_vms = json.loads('$$LSSD_VMS')
+        default_zone = '$$DEFAULT_ZONE'
         
         for vm in lssd_vms:
             vm_name = vm['name'] if isinstance(vm, dict) else vm
+            vm_zone = vm.get('zone', default_zone) if isinstance(vm, dict) else default_zone
             temp_disk_name = f'{vm_name}-snapshot-temp'
             
             # Detach disk from VM
-            print(f'Detaching temp disk from {vm_name}')
+            print(f'Detaching temp disk from {vm_name} (zone: {vm_zone})')
             subprocess.run([
                 'gcloud', 'compute', 'instances', 'detach-disk', vm_name,
                 '--disk=' + temp_disk_name,
-                '--zone=$$ZONE',
+                f'--zone={vm_zone}',
                 '--project=$$PROJECT_ID'
             ], capture_output=True)
             
@@ -403,7 +425,7 @@ steps:
             print(f'Deleting temp disk: {temp_disk_name}')
             subprocess.run([
                 'gcloud', 'compute', 'disks', 'delete', temp_disk_name,
-                '--zone=$$ZONE',
+                f'--zone={vm_zone}',
                 '--project=$$PROJECT_ID',
                 '--quiet'
             ], capture_output=True)
@@ -418,6 +440,8 @@ substitutions:
   _FORKS: '10'
   _GCS_BUCKET: 'base-mainnet-snapshot'
   _PROJECT_ID: 'bct-prod-c3-tdx-3'
+  _FORCE: ''       # Set to 'true' to allow service restarts on running VMs
+  _PLAN_ONLY: ''   # Set to 'true' for check mode (preview changes, no apply)
 
 options:
   logging: CLOUD_LOGGING_ONLY
